fix(item): input-wrapper now inherits overflow (#21282)

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -328,7 +328,7 @@ button, a {
 
   text-overflow: ellipsis;
 
-  overflow: hidden;
+  overflow: inherit;
   box-sizing: border-box;
 }
 
